kubernetes/5_namespace/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: docker.io/library/nginx:stable-alpine-slim
          name: hello
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
